--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <script>
 var req = new XMLHttpRequest();
 req.onload = reqListener;
-req.open('GET','https://emory-staging.zeiss.com/emoryservice/api/v1/favourites',true);
+req.open('POST','https://emory-staging.zeiss.com/emoryservice/api/v1/login/refresh-token',true);
 req.withCredentials = true;
 req.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
 req.setRequestHeader("Origin", "johanrydbergmoller.github.io");
