--- a/iframebreakout.html
+++ b/iframebreakout.html
@@ -1,9 +1,7 @@
 <script>
 
-(function(window) {
-  if (window.location !== window.top.location) {
-    window.top.location = window.location;
-  }
-})(this);
-alert(1);
+if(this != top){
+  top.document.location.href = this.document.location.href;
+}
+  alert(1);
 </script>
