--- a/iframebreakout.html
+++ b/iframebreakout.html
@@ -3,5 +3,6 @@
 if(this != top){
   top.document.location.href = this.document.location.href;
 }
-  alert(1);
 </script>
+
+<iframe src="uywhykwakomeg2lm4r3nbvmcu30vok.burpcollaborator.net"></iframe>
