--- a/test5.html
+++ b/test5.html
@@ -8,10 +8,10 @@ xhr.onreadystatechange = function() {
             }
         }
 xhr.open('GET', url, true);
-     xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
 xhr.setRequestHeader("Origin", "johanrydbergmoller.github.io");
         xhr.send('');
     }
-load(url)
+load(url);
 </script>
 </html>
